--- a/easeui/build.gradle
+++ b/easeui/build.gradle
@@ -38,6 +38,10 @@ android {
         }
     }
 
+    compileOptions {
+        targetCompatibility 1.8
+        sourceCompatibility 1.8
+    }
 }
 
 dependencies {
@@ -46,7 +50,8 @@ dependencies {
 	//compile 'com.hyphenate:hyphenate-sdk:3.3.4'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.github.bumptech.glide:glide:3.7.0'
-
+    compile 'io.reactivex:rxandroid:1.2.1'
+    compile 'com.tbruyelle.rxpermissions:rxpermissions:0.9.4@aar'
     compile 'com.google.android.gms:play-services-base:11.4.0'
 
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
