--- a/mall/build.gradle
+++ b/mall/build.gradle
@@ -11,7 +11,7 @@ android {
         targetSdkVersion 27
         multiDexEnabled true
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         javaCompileOptions { annotationProcessorOptions { includeCompileClasspath = true } }
 
@@ -20,6 +20,12 @@ android {
             abiFilters 'armeabi', 'armeabi-v7a', 'arm64-v8a','x86'
             // 还可以添加 'x86', 'x86_64', 'mips', 'mips64'
         }
+
+        manifestPlaceholders = [
+                JPUSH_PKGNAME : "com.hzxmkuar.wumeihui",
+                JPUSH_APPKEY : "b62b6927fd9c4497a8a63b02",
+                JPUSH_CHANNEL : "developer-default"
+        ]
     }
     buildTypes {
         release {
@@ -104,6 +110,8 @@ dependencies {
     compile 'com.tuyenmonkey:mkloader:1.4.0'
     compile 'com.superluo:textbannerview:1.0.5'
     compile 'com.github.iwgang:countdownview:2.1.6'
+    compile 'cn.jiguang.sdk:jpush:3.1.5'  // 此处以JPush 3.1.5 版本为例。
+    compile 'cn.jiguang.sdk:jcore:1.2.3'  // 此处以JCore 1.2.3 版本为例。
     compile(name:'securePay-180419-v3.2.1.3', ext:'aar')
     compile project(':easeui')
 }
